fix/client: Insufficient color contrast on highlighted code block in Dark Mode

--- a/client/src/components/layouts/global.css
+++ b/client/src/components/layouts/global.css
@@ -93,7 +93,7 @@ p {
 }
 
 ::selection {
-  background-color: var(--selection-color);
+  background-color: var(--selection-color) !important;
 }
 
 @media (max-width: 500px) {
